<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ul.activities.LoginActivity"
    android:background="@color/backgroudn">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hamburguer"
        android:layout_marginTop="60dp"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:layout_marginRight="56dp"
        android:fontFamily="@font/opensans_extrabold"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="46dp"
        android:background="@color/white"
        android:hint="@string/login_email"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEmail"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="46dp"
        android:hint="@string/login_password"
        app:hintTextColor="@color/black"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:background="@color/white"
            android:shadowRadius="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/layoutPassword"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="36dp"
        android:background="@color/button"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/login_signin"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp" />


</RelativeLayout>