<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ul.activities.RegisterActivity"
    android:background="@color/backgroudn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroudn">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/hamburguer"
            android:layout_marginTop="60dp"/>


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="174dp"
            android:fontFamily="@font/opensans_extrabold"
            android:text="@string/register_createaccount"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="46dp"
            android:background="@color/white"
            android:hint="@string/register_nome"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:hint="@string/register_nome"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutName"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="46dp"
            android:background="@color/white"
            android:hint="@string/login_email"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutEmail"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="46dp"
            android:background="@color/white"
            android:hint="@string/login_password"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/layoutPassword"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="36dp"
            android:background="@color/button"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/register_createaccountbutton"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>